[workspace]
resolver = "2"
members = [
    "ussal-viewer",
    "ussal-shared",
    "ussal-bencher",
    "ussal-server",
    "ussal-networking",
    "run-wasm",
]

[workspace.dependencies]
axum = { version = "0.6.0", features = ["ws"] }
serde = { version = "1.0.160", features = ["derive"] }
clap = { version = "4.2.2", features = ["derive"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0.70"
tracing = "0.1.37"
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.28"
serde_cbor = "0.11.2"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
subprocess = "0.2.7"
serde_json = "1.0.96"