[package]
name = "ussal-bencher"
version = "0.1.0"
edition = "2021"
default-run = "ussal-bencher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal_shared = { path = "../ussal-shared" }
ussal-networking = { path = "../ussal-networking" }
subprocess = "0.2.7"
wasm-bindgen-cli-support = "0.2.78"
log = "0.4"
tokio = { version = "1.27.0", features = ["full"] }
futures-util = "0.3.28"
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-webpki-roots"] }
clap = { version = "4.2.2", features = ["derive"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
url = "2.3.1"
serde_cbor = "0.11.2"
anyhow = "1.0.70"
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
criterion = "0.4.0"
glam = "0.24.0"
serial_test = "2.0.0"

[target.'cfg(unix)'.dev-dependencies]
tokio-bin-process = { version = "0.1.0", git = "https://github.com/rukai/tokio-bin-process", branch = "fix_running_external_crates" }

[[bench]]
name = "glam_mat4"
harness = false
