[package]
name = "ussal-bencher"
version = "0.1.0"
edition = "2021"
default-run = "ussal-bencher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal_shared = { path = "../ussal-shared" }
ussal-networking = { path = "../ussal-networking" }
wasm-bindgen-cli-support = "0.2.78"
log = "0.4"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
url = "2.3.1"
subprocess.workspace = true
serde_cbor.workspace = true
futures-util.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo_metadata = "0.15.4"

[dev-dependencies]
criterion = { version = "0.5.0", default-features = false }
glam = "0.24.0"
serial_test = "2.0.0"

[target.'cfg(unix)'.dev-dependencies]
tokio-bin-process = { version = "0.1.0", git = "https://github.com/shotover/tokio-bin-process" }

[[bench]]
name = "glam_mat4"
harness = false
