[package]
name = "ussal-client"
version = "0.1.0"
edition = "2021"
default-run = "ussal-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal-archive = { path = "../ussal-archive" }
ussal-networking = { path = "../ussal-networking" }
wasm-bindgen-cli-support = "0.2.78"
log = "0.4"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
url = "2.3.1"
subprocess.workspace = true
serde_cbor.workspace = true
futures-util.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo_metadata = "0.18"

[dev-dependencies]
criterion = { version = "0.5.0", default-features = false }
divan = "0.1.8"
glam = "0.25.0"
serial_test = "3.0.0"

[target.'cfg(unix)'.dev-dependencies]
tokio-bin-process = "0.4.0"

[[bench]]
name = "criterion_glam_mat4"
harness = false

[[bench]]
name = "divan_glam_mat4"
harness = false
