[package]
name = "ussal-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.28"
serde_cbor = "0.11.2"
axum = { version = "0.6.0", features = ["ws"] }
