[package]
name = "ussal-networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor.workspace = true
futures-util.workspace = true
axum.workspace = true
serde.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio-tungstenite.workspace = true