[package]
name = "ussal-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
axum-server = "0.4.7"
clap = { version = "4.2.2", features = ["derive"] }
dirs-next = "2.0.0"
rustls = "0.20.0"
rustls-acme = { version = "0.6.0", features = ["axum"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
