[package]
name = "ussal_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
getrandom = { version = "0.2.9", features = ["js"] }
