[package]
name = "ussal_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_cbor.workspace = true
uuid.workspace = true
getrandom = { version = "0.2.9", features = ["js"] }
