[package]
name = "ussal_viewer_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal_shared = { path = "../../ussal-shared" }
ussal_viewer = { path = "../../ussal-viewer" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"
eframe = "0.21"

[dependencies.web-sys]
version = "0.3.4"
features = [
#   'DomTokenList',
#   'Headers',
#   'HtmlCanvasElement',
#   'HtmlCollection',
#   'HtmlInputElement',
#   'HtmlSelectElement',
   'Request',
  'RequestInit',
  'RequestMode',
  'Response',
#   'Window',
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[workspace]
