[package]
name = "ussal-viewer-web"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal-archive = { path = "../../ussal-archive" }
ussal-viewer = { path = "../../ussal-viewer" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"
eframe = "0.22"
# just needed to force enable webgl support for egui
wgpu = { version = "0.16.0", features = ["webgl"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
#   'DomTokenList',
#   'Headers',
#   'HtmlCanvasElement',
#   'HtmlCollection',
#   'HtmlInputElement',
#   'HtmlSelectElement',
   'Request',
  'RequestInit',
  'RequestMode',
  'Response',
#   'Window',
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[workspace]
