[package]
name = "ussal-viewer-web"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ussal-archive = { path = "../../ussal-archive" }
ussal-viewer = { path = "../../ussal-viewer" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3.55"
eframe = "0.25"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[workspace]
